package edu.hitsz.strategy;

public class RingShoot {
}
