@startuml
'https://plantuml.com/class-diagram


interface ShootStrategy{
+ shoot(AbstractAircraft aircraft) : List<BaseBullet>
}

class StraightShoot{
+ shoot(AbstractAircraft aircraft) : List<BaseBullet>
}

class ScatteringShoot{
+ shoot(AbstractAircraft aircraft) : List<BaseBullet>
}

class RingShoot{
+ shoot(AbstractAircraft aircraft) : List<BaseBullet>
}

abstract class AbstractFlyingObject
{
    # locationX:int
    # locationY:int
    # speedX:int
    # speedY:int
    # image:BufferedImage
    # width:int
    # height:int
    # isValid:boolean

    + AbstractFlyingObject(int locationX, int locationY, int speedX, int speedY)
    + forward():void
    + crash(AbstractFlyingObject flyingObject):boolean
    + setLocation(double locationX, double locationY):void
    + getLocationX():int
    + getLocationY():int
    + getSpeedY():int
    + getImage():BufferedImage
    + getWidth():int
    + getHeight():int
    + notValid():boolean
    + vanish():void
}

abstract class AbstractAircraft
{
	# maxHp:int
    # hp:int
    - shootStrategy:ShootStrategy
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + decreaseHp(int decrease):void
    + getHp():int
    + {abstract} shoot():List<BaseBullet>
    + setShootStrategy(ShootStrategy strategy):void

 }

AbstractFlyingObject <|-- AbstractAircraft
ShootStrategy <|-- StraightShoot
ShootStrategy <|--ScatteringShoot
ShootStrategy <|-- RingShoot
ShootStrategy --o AbstractAircraft
@enduml